test(*): add new test case